--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ build/Release
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
 
-/js/.DS_Store
+.DS_Store
 
-/.DS_Store
+bower_components
+build
